css/components/form.css
form, input, textarea {
  width: 100%;
} 

input, textarea {
  border: 3px solid lightblue;
  line-height: 35px;
  margin-bottom: 15px;
  padding-left: 15px;
}

input::placeholder, textarea::placeholder {
  font-family: monospace;
}

input:focus-visible {
  border: 3px solid lightcoral;
}

.form-buttons {
  display: flex;
  justify-content: flex-start;
}

@media (min-width: 760px) {
  form {
    margin-top: 50px;
  }
  
  .form-details {
    display: flex;
    gap: 20px;
  }
  
  .form-half {
    width: 50%;
  }

  .form-buttons {
    display: flex;
    justify-content: center;
  }
}

